# university_labs

OOP/lab3a/: README.MD  multiplication.hpp  test.cpp
algorithms/lab2/: RedBlackTree.hpp  RedBlackTree.tpp  main.cpp  struct.hpp
algorithms/lab3/: SplayTree.hpp
algorithms/lab6/: BplusTree.h  BplusTree.tpp  IterationPolicy.h
algorithms/lab8/: CMakeLists.txt
algorithms/lab_хз_яка/: CMakeLists.txt  RedBlackTreeNode.tpp  main.cpp
semester2/Lab4/: CMakeLists.txt  README.txt  datetime.h  filesystem.h  main.cpp  tree.h
semester2/lab1/: CMakeLists.txt  Demonstration.h  Readme.txt  Search.h  UserInteraction.h  benchmark.h  benchmark.txt  binfiledemonstration.h  binfilemode.h  filedemonstration.h  filemode.h  main.cpp  structures.h  userbinfileinteraction.h  userfileinteraction.h  vectormode.h
semester2/lab2a/: CMakeLists.txt  ReadMe.txt  benchmark.txt  main.cpp  point.cpp  point.hpp  structures.h  structures.tpp  test.cpp  uml.xmi
semester2/lab2b_20/: CMakeLists.txt  README  list.h  main.cpp
semester2/lab2b_26/: list.h  main.cpp  worker.h
semester2/lab3a/: CMakeLists.txt  README.txt  benchmark_data.txt  definitions.h  main.cpp
semester2/lab3b/: CMakeLists.txt  README.txt  main.cpp  multiplesort.h  train.h
semester2/lab5/: CMakeLists.txt  benchmark.txt  graph_structure.h  list_graph.cpp  list_graph.h  main.cpp  matrix_graph.cpp  matrix_graph.h
semester2/lab6/: CMakeLists.txt  array.h  avl.h  benchmark.txt  bin_tree.h  list.h  main.cpp  point.h  test_runner.h  two_three_tree.h
semester2/lab7/: CMakeLists.txt  (+2 more)
semester5/OS/lab1/: CMakeLists.txt  main.c
semester5/OS/lab1/include/: demofuncs.h
semester6/Crypto/lab2/: CMakeLists.txt
semester6/Crypto/lab2/src/: main.cpp
semester6/Crypto/lab2/test/: test_main.cpp
(+232 files in other folders)
