cmake_minimum_required(VERSION 3.13)
project(study)

set(CMAKE_CXX_STANDARD 17)

add_executable(study main.cpp structures.h vectormode.h UserInteraction.h Search.h Demonstration.h filemode.h binfilemode.h userfileinteraction.h benchmark.h filedemonstration.h userbinfileinteraction.h binfiledemonstration.h)